--- a/HYS/style.css
+++ b/HYS/style.css
@@ -14,6 +14,7 @@ main{
   /* display:none; */
   
 }
+
 canvas {
   position: fixed;
   top:0;
@@ -338,6 +339,8 @@ a{
  
 }
 .headerstyle{
+  width: 100vw;
+  box-sizing: border-box;
   position: relative;
   top:0;
   font-size: 1.2rem;
@@ -348,6 +351,7 @@ a{
   cursor: pointer;
   /* z-index: 5; */
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   font-family: 'Dancing Script', cursive, sans-serif;
 }
@@ -383,17 +387,18 @@ a{
 }
 
 .cardsheismy {
-  position: absolute;
+  position: relative;
+  box-sizing: border-box;
   background-color: #F8F8F8;
   /* text-align: center; */
   border-radius: 1.5em;
-  min-width: 400px;
-  max-width: 1170px;
+  /* min-width: 400px; */
+  width: 100vw;
   /* width: 30%; */
   padding: 2.6em 3.8em;
   cursor: pointer;
   /* top: 50%; */
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   /* left: 40%; */
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1), 
     0 8px 8px rgba(0, 0, 0, 0.1),
@@ -406,7 +411,7 @@ a{
   line-height: 1.2em;
   position: relative;
   overflow: hidden;
-  width: 40em;
+  /* width: 40em; */
   color: rgb(128, 0, 117);
   font-size: 0.9em;
 }
@@ -1305,8 +1310,11 @@ footer{
     transform: translate3d(0,5px,0);
   }
 }
-@media screen and (max-width:1440px) {
-  #contenthead{
+@media screen and (max-width:1000px) {
+  /* #contenthead{
     font-size: 0.9rem;
+  } */
+  .cardcontainer{
+    padding: 8px;
   }
 }
