--- a/HYS/style.css
+++ b/HYS/style.css
@@ -2,23 +2,30 @@ html{
   box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
-  
+  /* overflow: hidden; */
+  margin: 0;
+  padding:0;
   font-family: 'Quicksand', sans-serif;
 }
 
 main{
   position: absolute;
   box-sizing: border-box;
-  width:100%;
-  /* overflow: hidden; */
+  width:100vw;
+  overflow: hidden;
   /* display:none; */
   
 }
 
+
 canvas {
+  box-sizing: border-box;
+  /* width: 100vw;
+  height: 100vh; */
   position: fixed;
   top:0;
-  left:0;
+  right:0;
+  /* overflow: hidden; */
   /* z-index: 1; */
   
 }
@@ -36,6 +43,8 @@ li{
 }
 #ullist{
  text-align: left;
+ margin: 8px auto;
+ padding: 8px;
 }
 #ullist li{
   margin: 15px auto 15px auto;
@@ -49,8 +58,8 @@ li{
   position:fixed;
   box-sizing: border-box;
   top:0;
-  left:0;
-  width:100vw;
+  right:0;
+  width:100%;
   height:100vh;
   background-color: linear-gradient(to right, #64005f 34%, #ff08ea 100%) ;
   background-image: url('purple.png');
@@ -63,6 +72,7 @@ li{
 .vwdiv{
   width: 100vw;
   height:100vh;
+  margin: auto;
   box-sizing: border-box;
   /* background-color: #64005f6b; */
   display: flex;
@@ -204,8 +214,9 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   width: 100vw;
   height: 100vh;
   position: fixed;
-  top: 0;
-  left:0;
+  box-sizing: border-box;
+  bottom: 0;
+  right:0;
   z-index: 3;
   display: flex;
   justify-content: center;
@@ -338,7 +349,7 @@ a{
   box-sizing: border-box;
   /* background: #cc020221;   */
   background: linear-gradient(to bottom, #ffffff00, #e2060665, #ffffff00);  
-  width: 100vw;
+  width: 100%;
   height:100vh;
   /* border: 1px solid red; */
  
@@ -467,10 +478,10 @@ a{
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* border: 1px solid red; */
 
 }
@@ -718,7 +729,7 @@ a{
 }
 
 #flexdivintro{
-  width:400px;
+  max-width:400px;
   margin: 80px auto 10px;
   position:relative;
   top: 40%;
@@ -833,7 +844,7 @@ a{
   width: 100vw;
   height: 100vh;
   top: 0;
-  left: 0;
+  right: 0;
   background: #671e41;
   overflow: hidden;
   z-index: 3;
@@ -1270,6 +1281,7 @@ a{
 footer{
 
   width: 100vw;
+  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   /* z-index: 3; */
@@ -1321,7 +1333,7 @@ footer{
   /* #contenthead{
     font-size: 0.9rem;
   } */
-  /* #flexdivintro, */
+  #flexdivintro,
   #backToDance,
   #goToStory,
   .backfrompass,
@@ -1349,4 +1361,16 @@ footer{
     width:90vw;
   }
 
+}
+
+@media screen and (max-width:768px) {
+  #flexdivintro,
+  #backToDance,
+  #goToStory,
+  .backfrompass,
+  #backfromletter{
+    width:90%;
+    margin:5px auto;
+
+  }
 }
